[package]
name    = "reqwest_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { version = "*" }
napi-derive-ohos = { version = "*" }
reqwest = {version = "0.12.4", features = ["json", "rustls-tls", "blocking"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
ohos-hilog-binding = "0.0.1"
hilog-binding = "0.0.4"
lazy_static = "1.4.0"
base64 = "0.22.1"
bytes = "1.6.0"

[build-dependencies]
napi-build-ohos = { version = "*" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
